compiler/test/programs/syntax_error/unknown_declaration.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir >
    <bad_func
        name="bad"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
        <body>
        </body>
    </bad_func>
</fluir>
